--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -65,7 +65,7 @@ easy_admin:
                   fields:
                       - { property: 'title', label: 'Titre', type: 'string' }
                       - { property: 'body', label: 'Corps', type: 'text' }
-                      - { property: 'image', label: 'Image', type: 'image', base_path: '%app.path.post_natio_images%' }
+                      - { property: 'images', label: 'Images' }
                       - { property: 'enabled', label: 'Affiché', type: 'toggle' }
                       - { property: 'createdAt', label: 'Date de création', type: 'datetime' }
                       - { property: 'updatedAt', label: 'Date de mise à jour', type: 'datetime' }
@@ -73,7 +73,7 @@ easy_admin:
                   fields:
                       - { property: 'title', label: 'Titre' }
                       - { property: 'body', label: 'Corps', type: 'fos_ckeditor' }
-                      - { property: 'imageFile', label: 'Image', type: 'vich_image' }
+                      - { property: 'images', label: 'Images', type: 'collection', type_options: { entry_type: 'App\Form\PostNatioImageType', by_reference: false } }
                       - { property: 'enabled', label: 'Affiché' }
         Professeurs:
             class: App\Entity\Professeurs
