[+~] add a lot of stuff and modify some in order to maybe finish project

--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -35,3 +35,18 @@ vich_uploader:
         documents_utiles:
             uri_prefix: '%app.path.documents_utiles%'
             upload_destination: '%kernel.project_dir%/public%app.path.documents_utiles%'
+        documents_competition:
+            uri_prefix: '%app.path.documents_competition%'
+            upload_destination: '%kernel.project_dir%/public%app.path.documents_competition%'
+        documents_evenement:
+            uri_prefix: '%app.path.documents_evenement%'
+            upload_destination: '%kernel.project_dir%/public%app.path.documents_evenement%'
+        inscription_avant:
+            uri_prefix: '%app.path.inscription_avant%'
+            upload_destination: '%kernel.project_dir%/public%app.path.inscription_avant%'
+        inscription_pendant:
+            uri_prefix: '%app.path.inscription_pendant%'
+            upload_destination: '%kernel.project_dir%/public%app.path.inscription_pendant%'
+        inscription_apres:
+            uri_prefix: '%app.path.inscription_apres%'
+            upload_destination: '%kernel.project_dir%/public%app.path.inscription_apres%'
