--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -27,12 +27,19 @@ easy_admin:
             - { entity: 'TaisoCours', icon: 'school' }
             - { entity: 'NeWazaCours', icon: 'school' }
             - { label: 'Inscription' }
+            - label: 'Avant'
+              children: ['InscriptionAvantCategorie', 'InscriptionAvantDocument', 'InscriptionAvantPhoto', 'InscriptionAvantTexte']
+            - label: 'Pendant'
+              children: ['InscriptionPendantCategorie', 'InscriptionPendantDocument', 'InscriptionPendantPhoto', 'InscriptionPendantTexte']
+            - label: 'Apres'
+              children: ['InscriptionApresTexte', 'InscriptionApresPhoto', 'InscriptionApresDocument', 'InscriptionApresCategorie']
             - { entity: 'FicheInscription', label: "Fiche d'inscription", icon: 'copy' }
             - { entity: 'Competition', icon: 'trophy' }
             - { label: 'Actualités' }
             - { entity: 'PostClub', icon: 'tag' }
             - { entity: 'PostNatio', icon: 'globe' }
             - { entity: 'Evenements', icon: 'calendar-alt' }
+            - { entity: 'EvenementDocument', icon: 'copy' }
             - { label: 'Documents' }
             - { entity: 'Gallery', icon: 'images' }
             - { entity: 'PhotosPassagesGrades', icon: 'graduation-cap' }
@@ -260,15 +267,21 @@ easy_admin:
                     - { name: 'admin_competition_show', label: 'Voir Inscrit', type: 'route' }
                 fields:
                     - { property: 'sport', label: 'Sport', type: 'string' }
+                    - { property: 'nom', label: 'Nom', type: 'string' }
                     - { property: 'lieu', label: 'Lieu', type: 'string' }
+                    - { property: 'description', label: 'Description', type: 'text' }
                     - { property: 'date', label: 'Date', type: 'date' }
                     - { property: 'competitionInscrits', label: "Nombre d'inscrit" }
+                    - { property: 'documents', label: "Documents" }
                     - { property: 'enabled', label: 'Affiché', type: 'toggle' }
             form:
                 fields:
                     - { property: 'sport', label: 'Sport', type: 'choice', type_options: { choices: { Judo: 'Judo', JuJitsu: 'JuJitsu', Taiso: 'Taiso', NeWaza: 'NeWaza' } } }
+                    - { property: 'nom', label: 'Nom' }
                     - { property: 'lieu', label: 'Lieu' }
+                    - { property: 'description', label: 'Description', type: 'fos_ckeditor' }
                     - { property: 'date', label: 'Date', type: 'date', type_options: { widget: 'single_text', html5: 'true' } }
+                    - { property: 'documents', label: 'Documents', type: 'collection', type_options: { entry_type: 'App\Form\CompetitionDocumentType', by_reference: false } }
                     - { property: 'enabled', label: 'Affiché' }
         JudoCours:
             class: App\Entity\JudoCours
@@ -332,7 +345,7 @@ easy_admin:
                     - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
         Evenements:
             class: App\Entity\Evenement
-            label: 'Evénements'
+            label: 'Calendrier'
             list:
                 fields:
                     - { property: 'titre', label: 'Titre', type: 'string' }
@@ -371,15 +384,18 @@ easy_admin:
                     - { name: 'documentShow', type: 'route', label: 'Voir Fiche' }
                 fields:
                     - { property: 'titre', label: 'Fiche', type: 'string' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
                     - { property: 'enabled', label: 'Affiché', type: 'toggle' }
             new:
                 fields:
                     - { property: 'titre', label: 'Titre' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
                     - { property: 'ficheFile', label: 'Fiche', type: 'vich_file', type_options: { required: true } }
                     - { property: 'enabled', label: 'Affiché' }
             edit:
                 fields:
                     - { property: 'titre', label: 'Titre' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
                     - { property: 'ficheFile', label: 'Fiche', type: 'vich_file', type_options: { allow_delete: false } }
                     - { property: 'enabled', label: 'Affiché' }
         Palmares:
@@ -395,3 +411,185 @@ easy_admin:
                     - { property: 'annee', label: 'Année', type: 'integer' }
                     - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
                     - { property: 'enabled', label: 'Affiché' }
+        EvenementDocument:
+            class: App\Entity\EvenementDocument
+            label: 'Calendrier Synthétisé'
+            list:
+                actions:
+                    - { name: 'calendrierDocument', type: 'route', label: 'Voir Fiche' }
+                fields:
+                    - { property: 'titre', label: 'Titre', type: 'string' }
+            new:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'ficheFile', label: 'Fiche', type: 'vich_file', type_options: { required: true } }
+            edit:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'ficheFile', label: 'Fiche', type: 'vich_file', type_options: { allow_delete: false } }
+        InscriptionApresCategorie:
+            class: App\Entity\InscriptionApresCategorie
+            label: 'Categorie'
+            list:
+                fields:
+                    - { property: 'categorie', label: 'Catégorie', type: 'string' }
+                    - { property: 'texte', label: 'Texte', type: 'text' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
+            form:
+                fields:
+                    - { property: 'categorie', label: 'Catégorie' }
+                    - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
+        InscriptionApresDocument:
+            class: App\Entity\InscriptionApresDocument
+            label: 'Document'
+            list:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'enabled', label: 'Affiché', type: 'toggle' }
+            new:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'documentFile', label: 'Document', type: 'vich_file', type_options: { required: true } }
+                    - { property: 'enabled', label: 'Affiché' }
+            edit:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'documentFile', label: 'Document', type: 'vich_file', type_options: { required: false } }
+                    - { property: 'enabled', label: 'Affiché' }
+        InscriptionApresPhoto:
+            class: App\Entity\InscriptionApresPhoto
+            label: 'Photo'
+            list:
+                fields:
+                    - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.inscription_apres%' }
+                    - { property: 'enabled', label: 'Affiché', type: 'toggle' }
+            new:
+                fields:
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { required: true } }
+                    - { property: 'enabled', label: 'Affiché' }
+            edit:
+                fields:
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { allow_delete: false } }
+                    - { property: 'enabled', label: 'Affiché' }
+        InscriptionApresTexte:
+            class: App\Entity\InscriptionApresTexte
+            label: 'Texte'
+            list:
+                fields:
+                    - { property: 'texte', label: 'Texte', type: 'text' }
+            form:
+                fields:
+                    - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
+
+
+        InscriptionAvantCategorie:
+            class: App\Entity\InscriptionAvantCategorie
+            label: 'Categorie'
+            list:
+                fields:
+                    - { property: 'categorie', label: 'Catégorie', type: 'string' }
+                    - { property: 'texte', label: 'Texte', type: 'text' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
+            form:
+                fields:
+                    - { property: 'categorie', label: 'Catégorie' }
+                    - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
+        InscriptionAvantDocument:
+            class: App\Entity\InscriptionAvantDocument
+            label: 'Document'
+            list:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'enabled', label: 'Affiché', type: 'toggle' }
+            new:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'documentFile', label: 'Document', type: 'vich_file', type_options: { required: true } }
+                    - { property: 'enabled', label: 'Affiché' }
+            edit:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'documentFile', label: 'Document', type: 'vich_file', type_options: { required: false } }
+                    - { property: 'enabled', label: 'Affiché' }
+        InscriptionAvantPhoto:
+            class: App\Entity\InscriptionAvantPhoto
+            label: 'Photo'
+            list:
+                fields:
+                    - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.inscription_avant%' }
+                    - { property: 'enabled', label: 'Affiché', type: 'toggle' }
+            new:
+                fields:
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { required: true } }
+                    - { property: 'enabled', label: 'Affiché' }
+            edit:
+                fields:
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { allow_delete: false } }
+                    - { property: 'enabled', label: 'Affiché' }
+        InscriptionAvantTexte:
+            class: App\Entity\InscriptionAvantTexte
+            label: 'Texte'
+            list:
+                fields:
+                    - { property: 'texte', label: 'Texte', type: 'text' }
+            form:
+                fields:
+                    - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
+
+
+        InscriptionPendantCategorie:
+            class: App\Entity\InscriptionPendantCategorie
+            label: 'Categorie'
+            list:
+                fields:
+                    - { property: 'categorie', label: 'Catégorie', type: 'string' }
+                    - { property: 'texte', label: 'Texte', type: 'text' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
+            form:
+                fields:
+                    - { property: 'categorie', label: 'Catégorie' }
+                    - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
+        InscriptionPendantDocument:
+            class: App\Entity\InscriptionPendantDocument
+            label: 'Document'
+            list:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'enabled', label: 'Affiché', type: 'toggle' }
+            new:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'documentFile', label: 'Document', type: 'vich_file', type_options: { required: true } }
+                    - { property: 'enabled', label: 'Affiché' }
+            edit:
+                fields:
+                    - { property: 'titre', label: 'Titre' }
+                    - { property: 'documentFile', label: 'Document', type: 'vich_file', type_options: { required: false } }
+                    - { property: 'enabled', label: 'Affiché' }
+        InscriptionPendantPhoto:
+            class: App\Entity\InscriptionPendantPhoto
+            label: 'Photo'
+            list:
+                fields:
+                    - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.inscription_pendant%' }
+                    - { property: 'enabled', label: 'Affiché', type: 'toggle' }
+            new:
+                fields:
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { required: true } }
+                    - { property: 'enabled', label: 'Affiché' }
+            edit:
+                fields:
+                    - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { allow_delete: false } }
+                    - { property: 'enabled', label: 'Affiché' }
+        InscriptionPendantTexte:
+            class: App\Entity\InscriptionPendantTexte
+            label: 'Texte'
+            list:
+                fields:
+                    - { property: 'texte', label: 'Texte', type: 'text' }
+            form:
+                fields:
+                    - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
