--- a/public/.htaccess
+++ b/public/.htaccess
@@ -53,6 +53,10 @@ DirectoryIndex index.php
     # Rewrite all other queries to the front controller.
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ %{ENV:BASE}/index.php [L]
+
+    # Trying to redirect http to https
+    RewriteCond %{SERVER_PORT} 80
+    RewriteRule ^(.*)$ https://lillejudo.fr/$1 [R,L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
