jujitsu map change - update fixtures

--- a/src/DataFixtures/fixtures.yml
+++ b/src/DataFixtures/fixtures.yml
@@ -9,9 +9,11 @@ App\Entity\PostClub:
     title: '<word()>'
     body: '<text()>'
     enabled: true
+    carrousel: true
 
 App\Entity\PostNatio:
   postNatio{1..10}:
     title: '<word()>'
     body: '<text()>'
     enabled: true
+    carrousel: true
