--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 .idea
 ###< jetbrains ###
 
+###> ansible ###
+hosts.ini
+###< ansible ###
+
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
