--- a/.env
+++ b/.env
@@ -37,6 +37,5 @@ DATABASE_URL=mysql://user:password@mysql:3306/lillejudo?serverVersion=5.6
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 #MAILER_URL=null://localhost
-MAILER_URL=smtp://SSL0.OVH.NET:587?encryption=&username=testlillejudo@mathiastop.eu&password=bidule72417241
-#MAILER_URL=gmail://fiche.contact0000@gmail.com:Azerty0000@localhost
+MAILER_URL=gmail://fiche.contact0000@gmail.com:Azerty0000@localhost
 ###< symfony/swiftmailer-bundle ###
