remove old facebook package post and use facebook graph api package

--- a/.env
+++ b/.env
@@ -39,3 +39,12 @@ DATABASE_URL=mysql://user:password@mysql:3306/lillejudo?serverVersion=5.6
 #MAILER_URL=null://localhost
 MAILER_URL=gmail://fiche.contact0000@gmail.com:Azerty0000@localhost
 ###< symfony/swiftmailer-bundle ###
+
+# Follow this doc to get long lived access token
+# Token has to be a Page Access Token, and require following permission: pages_show_list, pages_read_engagement, pages_manage_posts
+# https://developers.facebook.com/docs/facebook-login/guides/access-tokens/get-long-lived/
+FACEBOOK_APP_ID='APP_ID'
+FACEBOOK_APP_SECRET='APP_SECRET'
+FACEBOOK_ACCESS_TOKEN='ACCESS_TOKEN'
+FACEBOOK_PAGE_ID='PAGE_ID'
+FACEBOOK_GRAPH_API_VERSION='v16.0'
