--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^2.0",
+        "facebook/graph-sdk": "^5.7",
         "friendsofsymfony/ckeditor-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^5.2",
-        "martin-georgiev/social-post-bundle": "^3.1",
         "mhujer/breadcrumbs-bundle": "^1.5",
         "nyholm/psr7": "^1.5",
         "phpdocumentor/reflection-docblock": "^5.2",
